2004-02-04  Saito <saito2@digitalme.com>

	* timidity/readmidi.c, timidity/timidity.c, timidity/playmidi.[ch]:
	  Add --module [n] option.
	* timidity/output.[ch]:
	  Add some codes for 24-bit output.

2004-02-04  mput <root@mput.dip.jp>

	* Makefile.am (dist-hook): Fix to preserve timestamp.

2004-02-03  Kentaro Sato <kentaro@ranvis.com>

	* timidity/timidity.c:
	  Fixed copybank bug.
	* timidity/instrum.[ch], timidity/readmidi.c:
	  Fixed problem freeing mapped banks.

2004-02-03  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* doc/C/timidity.1, doc/ja_JP.ujis/timidity.1,
	  doc/C/timidity.cfg.5, doc/ja_JP.ujis/timidity.cfg.5:
	  Beautify man pages
	* timidity/sndfont.c:
	  Hack up around set_rootkey() and set_rootfreq()

2004-02-03  Saito <saito2@digitalme.com>

	* timidity/mix.c, timidity/timidity.c, timidity/playmidi.[ch],
	  timidity/readmidi.c, timidity/reverb.c:
	  Change implementation of #extension timeout.
	  Fix some initializations.
	  Fix some free() functions.
	  Implement opt_default_module.
	  Fix timidity_pre_load_configuration().
	* interface/w32g_utl.c:
	  Fix bug about number of voices.

2004-02-02  Kentaro Sato <kentaro@ranvis.com>

	* timidity/instrum.c, timidity/timidity.c:
	  Changed alloc_instrument_map_bank()'s behavior.

2004-02-02  Saito <saito2@digitalme.com>

	* timidity/mix.c:
	  Fix sustain.
	* timidity/sndfont.c:
	  fasten set_rootfreq().

2004-02-02  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/sndfont.c:
	  Fix around scale tuning

2004-02-01  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* doc/C/timidity.cfg.5, doc/ja_JP.ujis/timidity.cfg.5:
	  Update "(bank|drumset) mapid num" and "#extension copymap"

2004-01-31  mput <root@mput.dip.jp>

	* Makefile.am (EXTRA_DIST): Fix to fit below
	* INSTALL.jp: Move to INSTALL.ja
	* README.jp: Move to README.ja
	* INSTALL: update.
	* README: update.

2004-01-31  Kentaro Sato <kentaro@ranvis.com>

	* timidity/instrum.[ch], timidity/playmidi.[ch],
	  timidity/readmidi.c, timidity/timidity.c: